--- a/pom.xml
+++ b/pom.xml
@@ -40,5 +40,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.0.73-beta</version>
+        </dependency>
+
     </dependencies>
 </project>
